# vgg-shoe-boot-sandal-classifier

./: .gitignore  Pipfile  Procfile  README.md  app.py  pytest.ini  settings.py  setup.cfg  setup.py  streamlit_app.py
notebooks/.ipynb_checkpoints/: Meuble_classification-checkpoint.ipynb
src/: post_processing.py  prediction.py
tests/: conftest.py  test_app.py  test_post_processing.py  test_prediction.py
