[metadata]
name = src
version = 0.1.0
author = "Bastian Thiede"
description = "Codepan GmbH coding challenge"

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[flake8]
# From https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
extend-ignore = E203, W503

[tool.isort]
# From https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = black

[mypy]
files = src,tests
